@@ -2265,10 +2265,10 @@ KMR_ideas = {
 SDT_ideas = {
     start = {
 		yearly_corruption = -0.1
-		prestige = 0.5
+		global_tax_modifier = 0.1
     }
 	bonus = {
-		development_cost = -0.1
+		build_time = -0.1
     }
     
     trigger = {
@@ -2279,10 +2279,10 @@ SDT_ideas = {
 		idea_cost = -0.1
     }
     SDT_idea_2 = {
-		diplomats = 1
+		diplomatic_upkeep = 1
     }
     SDT_idea_3 = {
-		technology_cost = -0.05
+		global_institution_spread = 0.1
     }
     SDT_idea_4 = {
 		spy_offence = 0.2
