@@ -814,3 +814,57 @@ merc_genoese_crossbowmen = {
 		fire_damage = 0.1
 	}
 }
+
+merc_armagnacs = {
+	regiments_per_development = 0.0125
+	artillery_weight = 0 # No artillery
+	cavalry_weight = 0.3
+	cavalry_cap = 5
+    home_province = 2818 #Orleans
+    cost_modifier = 0.9
+	sprites = { dlc001_orl_sprite_pack dlc049_FRA_sprite_pack dlc028_fra_sprite_pack dlc054_fra_sprite_pack fra_base_sprite_pack }
+    trigger = {
+		capital_scope = { 
+			OR = {
+				superregion = british_isles_superregion
+				superregion = french_superregion
+				superregion = burgundian_superregion
+			}
+		}
+		OR = {
+			current_age = age_of_crisis
+			current_age = age_of_dynasticism
+			current_age = age_of_discovery
+		}
+	}
+	modifier = {
+		discipline = -0.025
+        loot_amount = 0.25
+	}
+}
+
+merc_latvian_mercenaries = {
+    regiments_per_development = 0.015
+    home_province = 5830 # Koknese
+	sprites = { easterngfx_sprite_pack }
+	trigger = {
+		culture_group = baltic
+		5830 = {
+			owner = { culture_group = baltic }
+		}
+	}
+    modifier = { }
+}
+
+merc_estonian_warriors = {
+    regiments_per_development = 0.015
+    home_province = 5887 # Vomentaga
+	sprites = { easterngfx_sprite_pack }
+	trigger = {
+		culture_group = finno_ugric
+		5887 = {
+			owner = { culture_group = finno_ugric }
+		}
+	}
+    modifier = { }
+}
