@@ -894,6 +894,8 @@ has_completed_all_reforms_trigger = {
 			has_reform = many_fingers_of_god_reform
 			has_reform = religious_permanent_revolution_reform
 			has_reform = religion_in_one_country_reform
+			#mod
+			has_reform = hussite_radicalism_reform
 		}
 	}
 }
@@ -917,6 +919,8 @@ has_final_tier_reforms_trigger = {
 			has_reform = many_fingers_of_god_reform
 			has_reform = religious_permanent_revolution_reform
 			has_reform = religion_in_one_country_reform
+			#mod
+			has_reform = hussite_radicalism_reform
 		}
 	}
 }
