@@ -225,3 +225,6 @@
  merc_black_company: "Black Company"
  merc_polish_hussars: "Polish Husaria"
  merc_genoese_crossbowmen: "Genoese Crossbowmen"
+ merc_armagnacs: "Armagnacs"
+ merc_latvian_mercenaries: "Latvian Mercenaries"
+ merc_estonian_warriors: "Estonian Warriors"
