@@ -225,3 +225,6 @@
  merc_black_company: "Schwarze Kompanie"
  merc_polish_hussars: "Polnische Hussaria"
  merc_genoese_crossbowmen: "Genuesische Armbrustschützen"
+ merc_armagnacs: "Armagnaken"
+ merc_latvian_mercenaries: "Lettische Söldner"
+ merc_estonian_warriors: "Estische Krieger"
