@@ -2,6 +2,7 @@
 
 # v 2.2.1 #
 
+-Added the following new mercenary companies: Armagnacs, Latvian Mercenaries, Estonian Warriors
 -Small fixes for the following mission trees: Austria
 -Fixed major bug causing the Factionalism of the Rus disaster to trigger multiple times
 -Gave certain Pagan religions access to a new clergy privilege, allowing them to change their personal deity
